K-gateway-envoy-proxy/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: suyash-deployment
  namespace: suyash-ns
  labels:
    first: app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: suyash-container

        image: suyashrokade78/fitness:v1.0.0

        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: suyash-service
  namespace: suyash-ns
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
