K-gateway-envoy-proxy/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: suyash-route
  namespace: suyash-ns

spec:
  parentRefs:
    - name: suyash-gateway

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
        - name: suyash-service
          port: 80
